# bluepill_rs_robo

./: Cargo.toml  README.md  openocd.cfg  openocd.gdb
examples/: empty_rtfm.rs  init_rtfm.rs
src/: main.rs
