[package]
name = "bluepill_rs_robo"
version = "0.0.0-zero.0"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6.8"
panic-itm = "0.4"
nb = "0.1"
cortex-m-semihosting = "0.3"
stm32f1 = "0.8"
cortex-m-rtfm = "0.4"

[dependencies.stm32f1xx-hal]
version = "0.4"
features = ["stm32f103", "rt"]
